chore: update Readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://przwojwwp.github.io/Think1st",
-  "name": "think1st",
+  "name": "Think1st",
   "private": true,
   "version": "0.0.0",
   "type": "module",
